px4_ws/logs/rgbd_slam/build.make.003.log.stderr
In file included from /usr/include/eigen3/Eigen/Core:284:0,
                 from /usr/include/eigen3/Eigen/Geometry:4,
                 from /home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/main.cpp:13:
/usr/include/eigen3/Eigen/src/Core/Assign.h: In instantiation of 'Derived& Eigen::DenseBase<Derived>::lazyAssign(const Eigen::DenseBase<OtherDerived>&) [with OtherDerived = Eigen::Block<Eigen::Matrix<float, 4, 4>, 4, 1, true>; Derived = Eigen::Matrix<float, 3, 1>]':
/usr/include/eigen3/Eigen/src/Core/PlainObjectBase.h:411:46:   required from 'Derived& Eigen::PlainObjectBase<Derived>::lazyAssign(const Eigen::DenseBase<OtherDerived>&) [with OtherDerived = Eigen::Block<Eigen::Matrix<float, 4, 4>, 4, 1, true>; Derived = Eigen::Matrix<float, 3, 1>]'
/usr/include/eigen3/Eigen/src/Core/Assign.h:520:110:   required from 'static Derived& Eigen::internal::assign_selector<Derived, OtherDerived, false, false>::run(Derived&, const OtherDerived&) [with Derived = Eigen::Matrix<float, 3, 1>; OtherDerived = Eigen::Block<Eigen::Matrix<float, 4, 4>, 4, 1, true>]'
/usr/include/eigen3/Eigen/src/Core/PlainObjectBase.h:618:105:   required from 'Derived& Eigen::PlainObjectBase<Derived>::_set_noalias(const Eigen::DenseBase<OtherDerived>&) [with OtherDerived = Eigen::Block<Eigen::Matrix<float, 4, 4>, 4, 1, true>; Derived = Eigen::Matrix<float, 3, 1>]'
/usr/include/eigen3/Eigen/src/Core/PlainObjectBase.h:603:107:   required from 'void Eigen::PlainObjectBase<Derived>::_set_selector(const OtherDerived&, const Eigen::internal::false_type&) [with OtherDerived = Eigen::Block<Eigen::Matrix<float, 4, 4>, 4, 1, true>; Derived = Eigen::Matrix<float, 3, 1>]'
/usr/include/eigen3/Eigen/src/Core/PlainObjectBase.h:595:189:   required from 'Derived& Eigen::PlainObjectBase<Derived>::_set(const Eigen::DenseBase<OtherDerived>&) [with OtherDerived = Eigen::Block<Eigen::Matrix<float, 4, 4>, 4, 1, true>; Derived = Eigen::Matrix<float, 3, 1>]'
/usr/include/eigen3/Eigen/src/Core/Matrix.h:172:30:   required from 'Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>& Eigen::Matrix<_Scalar, _Rows, _Cols, _Options, _MaxRows, _MaxCols>::operator=(const Eigen::MatrixBase<OtherDerived>&) [with OtherDerived = Eigen::Block<Eigen::Matrix<float, 4, 4>, 4, 1, true>; _Scalar = float; int _Rows = 3; int _Cols = 1; int _Options = 0; int _MaxRows = 3; int _MaxCols = 1]'
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/main.cpp:246:14:   required from here
/usr/include/eigen3/Eigen/src/Core/Assign.h:492:3: error: static assertion failed: YOU_MIXED_MATRICES_OF_DIFFERENT_SIZES
   EIGEN_STATIC_ASSERT_SAME_MATRIX_SIZE(Derived,OtherDerived)
   ^
make[2]: *** [CMakeFiles/rgbd_slam.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/rgbd_slam.dir/all] Error 2
make: *** [all] Error 2
